--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="people">People</string>
     <string name="popular_people">Popular People</string>
     <string name="discussion">Discussion</string>
+    <string name="in_theaters">In Theaters</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
