--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,18 @@
     <string name="created_by">Created By</string>
     <string name="homepage">Homepage</string>
 
+    <!--movie detail-->
+    <!-- tab-->
+    <string name="info_tab">INFO</string>
+    <string name="cast_tab">CAST</string>
+    <string name="review_tab">REVIEWS</string>
+    <!--end tab-->
+    <!--movie detail text-->
+    <string name="facts">Facts</string>
+    <string name="directed_by">Directed By</string>
+    <string name="budget">Budget</string>
+    <string name="revenue">Revenue</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
