--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="popular_people">Popular People</string>
     <string name="discussion">Discussion</string>
     <string name="in_theaters">In Theaters</string>
+
+    <!--movie detail fact-->
     <string name="overview">Overview</string>
     <string name="original_title">Original Title</string>
     <string name="original_language">Original Language</string>
@@ -27,6 +29,9 @@
     <string name="networks">Networks</string>
     <string name="created_by">Created By</string>
     <string name="homepage">Homepage</string>
+    <string name="production_companies">Production Companies</string>
+    <string name="release_infomation">Release Infomation</string>
+    <!--movie detail fact end-->
 
     <!--movie detail-->
     <!-- tab-->
